--- a/gtas-parent/gtas-webapp/src/main/webapp/dashboard/dashboard.html
+++ b/gtas-parent/gtas-webapp/src/main/webapp/dashboard/dashboard.html
@@ -8,8 +8,9 @@
         <div class="cbp-card cbp-card-shadow" style="height: 100%;">
           <div class="panel-body" style="height: 100%;">
             <!-- <my-elem ></my-elem> -->
-          
-            <iframe src= {{getKibanaUrl()}} style="height: calc(80vh - 130px);" width="100%" frameBorder="0"></iframe>
+
+            <iframe src= http://localhost:5601/app/kibana style="height: calc(80vh - 130px);" width="100%" frameBorder="0">2</iframe>
+
           </div>
         </div>
       </div>
