--- a/gtas-parent/gtas-webapp/src/main/webapp/login.html
+++ b/gtas-parent/gtas-webapp/src/main/webapp/login.html
@@ -38,7 +38,7 @@
    <header class="header" title="GLOBAL TRAVEL ASSESSMENT SYSTEM"></header>
    <div ng-cloak class="login-container cbp-card-container gtas-card-container">
      <div class="cbp-card cbp-card-shadow">
-       <h3 class="login-header">GTAS Login</h3>
+       <h3 class="login-header">Login</h3>
        <div class="panel-body">
          <form role="form" id="loginform" class="form"
           ng-controller="LoginController" ng-submit="login(credentials)">
