--- a/gtas-parent/gtas-webapp/src/main/webapp/dashboard/dash.html
+++ b/gtas-parent/gtas-webapp/src/main/webapp/dashboard/dash.html
@@ -5,7 +5,7 @@
     .bullet .range.s0 { fill: #eee; }
     .bullet .range.s1 { fill: #ddd; }
     .bullet .range.s2flight { fill: #ccc; }
-    .bullet .measure.s0 { fill: lightsteelblue; }
+    .bullet .measure.s0 { fill: red; }
     .bullet .measure.s1 { fill: steelblue; }
     .bullet .title { font-size: 14px; font-weight: bold; }
     .bullet .subtitle { fill: #999; }
