--- a/gtas-parent/gtas-webapp/src/main/webapp/main.html
+++ b/gtas-parent/gtas-webapp/src/main/webapp/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GTAS</title>
+  <title>AGENCY</title>
   <link rel="stylesheet" href="resources/node_modules/npm-font-open-sans/open-sans.css" />
   <link rel="stylesheet" href="resources/css/style-icomoon.css" />
    <link rel="stylesheet" href="resources/node_modules/cbp-theme/dist/cbp-theme.css" type="text/css" media="all" />
@@ -78,27 +78,15 @@
                 &nbsp;{{'nav.admin' | translate}}</a>
               </li>
               <!-- Neo4J Browser pop out-->
-              <li data-has-role="[{{ ROLES.ADMIN }}, {{ ROLES.MANAGE_QUERIES }}]"><a href="{{getNeo4JUrl()}}" target="_blank">
+<!--              <li data-has-role="[{{ ROLES.ADMIN }}, {{ ROLES.MANAGE_QUERIES }}]"><a href="{{getNeo4JUrl()}}" target="_blank">-->
+
+              <li data-has-role="[{{ ROLES.ADMIN }}, {{ ROLES.MANAGE_QUERIES }}]"><a href=https://localhost:7474/browser/ target="_blank">
                 <i class="fa fa-filter" aria-hidden="true"></i>
                 &nbsp;{{'nav.neo4j' | translate}}</a>
               </li>
             </ul>
           </li>
         </ul>
-
-
-        	<ul class="nav navbar-nav navbar-right">
-         		 <li class="dropdown mobile-hide">
-            		<a class="dropdown-toggle" data-toggle="dropdown" role="button" href="#">
-              			{{'nav.help' | translate}}<span class="caret"></span>
-           			 </a>
-           	 <ul class="dropdown-menu" role="menu">
-              	<li ><a href="#/aboutgtas">
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-                &nbsp;{{'gtas.about' | translate}}</a>
-              </li>
-              </ul>
-          </ul>
 
 
 
